--- a/index.html
+++ b/index.html
@@ -321,7 +321,124 @@ footer{
   </p>
 </section>
 
-<!-- (BAAKI CODE SAME HAI – Services, Skills, Experience, etc.) -->
+<!-- SERVICES -->
+<section id="services" class="section container">
+  <h2>What I Do</h2>
+  <div class="services">
+    <div class="service">
+      <h3>Paid Ads</h3>
+      <p>Meta & Google Ads — full-funnel setup, testing, scaling, and stability.</p>
+    </div>
+    <div class="service">
+      <h3>Creative Direction</h3>
+      <p>Hooks, angles, briefs, and performance-led creative feedback.</p>
+    </div>
+    <div class="service">
+      <h3>Growth Thinking</h3>
+      <p>Offers, AOV, margins, and ad decisions aligned with business reality.</p>
+    </div>
+  </div>
+</section>
+
+<!-- SKILLS -->
+<section id="skills" class="section container">
+  <h2>Skills & Capabilities</h2>
+  <div class="skills-grid">
+    <div class="skill">Meta Ads (Facebook & Instagram)</div>
+    <div class="skill">Google Ads (Search & Shopping)</div>
+    <div class="skill">DTC E-commerce Scaling</div>
+    <div class="skill">Creative Hooks & Angles</div>
+    <div class="skill">Ad Copywriting</div>
+    <div class="skill">Creative Testing Frameworks</div>
+    <div class="skill">Prompt Engineering (Marketing)</div>
+    <div class="skill">Data Analysis & Insights</div>
+    <div class="skill">ROAS & CPA Optimization</div>
+    <div class="skill">TOF–MOF–BOF Funnels</div>
+    <div class="skill">Retargeting & Lookalikes</div>
+    <div class="skill">Shopify & Pixel Basics</div>
+  </div>
+</section>
+
+<!-- EXPERIENCE -->
+<section id="experience" class="section container">
+  <h2>Experience & Results</h2>
+  <div class="experience-grid">
+    <div class="exp-card">
+      <div class="exp-bg" style="background-image:url('images/exp1.png')"></div>
+      <div class="exp-content">
+        <h3>Jewelry DTC Brand</h3>
+        <p>₹0 → ₹20L revenue in 5 months</p>
+      </div>
+    </div>
+    <div class="exp-card">
+      <div class="exp-bg" style="background-image:url('images/exp2.png')"></div>
+      <div class="exp-content">
+        <h3>Fashion DTC Brand</h3>
+        <p>₹60L revenue in 1 month</p>
+      </div>
+    </div>
+    <div class="exp-card">
+      <div class="exp-bg" style="background-image:url('images/exp3.png')"></div>
+      <div class="exp-content">
+        <h3>High-Spend Ad Account</h3>
+        <p>₹30L ad budget managed in one month</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- PROFIT FIRST -->
+<section class="profit-section">
+  <div class="container">
+    <div class="profit-grid">
+      <div class="profit-box red">
+        <div class="profit-title red">✕ VANITY GROWTH MODE</div>
+        <ul class="profit-list">
+          <li>ROAS that looks good but starves cash flow</li>
+          <li>Revenue spikes without meaningful profit</li>
+          <li>Scaling that creates stress, not leverage</li>
+        </ul>
+      </div>
+      <div class="profit-box green">
+        <div class="profit-title green">✔ PROFIT-LED GROWTH SYSTEM</div>
+        <ul class="profit-list">
+          <li>Profit built into the model, not calculated later</li>
+          <li>Scale that compounds without operational burn</li>
+          <li>Designed for DTC brands at ₹7L+/month</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- CREATIVES -->
+<section id="creative" class="section container">
+  <h2>Creative Work</h2>
+  <p style="color:var(--muted)">3 Static + 3 Video creatives guided by performance data</p>
+  <div class="gallery">
+    <div class="media"><img src="images/static1.jpg"></div>
+    <div class="media"><img src="images/static2.jpg"></div>
+    <div class="media"><img src="images/static3.jpg"></div>
+    <div class="media"><video src="videos/video1.mp4" autoplay muted loop></video></div>
+    <div class="media"><video src="videos/video2.mp4" autoplay muted loop></video></div>
+    <div class="media"><video src="videos/video3.mp4" autoplay muted loop></video></div>
+  </div>
+</section>
+
+<!-- CONTACT -->
+<section id="contact" class="section container">
+  <h2>Book Free 15-Min Audit Call</h2>
+  <div class="contact-box">
+    <form onsubmit="event.preventDefault();alert('Thanks! I will contact you shortly.');">
+      <input placeholder="Your Name" required>
+      <input placeholder="Email or WhatsApp" required>
+      <textarea rows="4" placeholder="Briefly describe your ad challenge"></textarea>
+      <div style="margin-top:14px">
+        <button class="cta-btn" type="submit">Book Free 15-Min Audit Call</button>
+      </div>
+    </form>
+  </div>
+</section>
 
 <footer>
   © 2025 • Pritam • Performance Marketer & Creative Strategist
