Improve logo visibility with opacity and filter changes
Updated logo opacity and filter styles for better visibility.

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ a{text-decoration:none;color:inherit;transition:0.3s}
   flex-wrap: wrap;
   justify-content: center;
   gap: 48px;
-  opacity: 0.0;
+  opacity: 1;
 }
 /* Logos Natural Fit */
 .logo-item {
@@ -178,12 +178,12 @@ a{text-decoration:none;color:inherit;transition:0.3s}
   width: auto;
   max-width: 150px;
   object-fit: contain; /* Logo katega nahi, pura dikhega */
-  filter: grayscale(000%);
+  filter: grayscale(none);
   transition: 0.4s;
   cursor: pointer;
 }
 .logo-item:hover {
-  filter: grayscale(0%);
+  filter: grayscale(none);
   opacity: 1;
   transform: translateY(-2px);
 }
