Update brand label and philosophy section text

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@ footer{
 </section>
 
 <section class="container brand-section reveal">
-  <span class="brand-label">Trusted by 7+ High-Growth Brands</span>
+  <span class="brand-label">Brands I Worked With</span>
   <div class="logo-grid">
     <img class="logo-item" src="logos/brand1.png" alt="Brand 1">
     <img class="logo-item" src="logos/brand2.png" alt="Brand 2">
@@ -460,7 +460,7 @@ footer{
 </section>
 
 <section class="section container reveal">
-  <h2>The Philosophy</h2>
+  <h2>My Philosophy Is</h2>
   <p style="max-width:700px;color:var(--text-muted);font-size:18px;">
     Most agencies chase ROAS. I chase <strong>Profit</strong>. <br><br>
     I’m Pritam, a creative strategist who understands that ads don't work in isolation. 
@@ -586,7 +586,7 @@ footer{
     </form>
     
     <div class="whatsapp-link">
-      Or <a href="https://wa.me/910000000000">DM me on WhatsApp</a>
+      Or <a href="https://wa.me/917029150328">DM me on WhatsApp</a>
     </div>
   </div>
 </section>
