Replace WhatsApp link with Instagram link

--- a/index.html
+++ b/index.html
@@ -585,8 +585,8 @@ footer{
       </div>
     </form>
     
-    <div class="whatsapp-link">
-      Or <a href="https://wa.me/917029150328">DM me on WhatsApp</a>
+    <div class="instagram-link">
+      Or <a href="https://ig.me/m/mrpipu">Directly DM Me</a>
     </div>
   </div>
 </section>
