--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@ footer{
 </section>
 
 <section id="experience" class="section container">
-  <h2 class="reveal">Recent Wins</h2>
+  <h2 class="reveal">Recent Experience</h2>
   <div class="experience-grid">
     <div class="exp-card reveal">
       <div class="exp-bg" style="background-image:url('images/exp1.png')"></div>
@@ -574,7 +574,7 @@ footer{
 </section>
 
 <section id="creative" class="section container">
-  <h2 class="reveal">Performance Creatives</h2>
+  <h2 class="reveal">Performance Creatives I Guided Recnt</h2>
   <p style="color:var(--text-muted); margin-bottom:30px" class="reveal">Data-backed creative testing strategy.</p>
   <div class="gallery">
     <div class="media reveal"><img src="images/static1.jpg"></div>
