Revise 'About Me' section in index.html
Updated the 'About Me' section to reflect current expertise and focus on performance marketing for founder-led DTC brands.

--- a/index.html
+++ b/index.html
@@ -479,14 +479,29 @@ footer{
   </div>
 </section>
 
-<section class="section container reveal">
-  <h2>My Philosophy Is</h2>
-  <p style="max-width:700px;color:var(--text-muted);font-size:18px;">
-    Most agencies chase ROAS. I chase <strong>Profit</strong>. <br><br>
-    I’m Pritam, a creative strategist who understands that ads don't work in isolation. 
-    To scale a founder-led brand, you need a system that connects ad spend, creative hooks, and unit economics.
+<section id="about" class="section container">
+  <h2>About Me</h2>
+
+  <p>
+    I’m <strong>Pritam</strong>, a performance marketer working with
+    <strong>founder-led DTC brands</strong> that want profitable, controlled growth.
+  </p>
+
+  <p>
+    I manage Meta & Google Ads, but my real work is aligning paid media with
+    <strong>margins, AOV, creatives, and cash flow</strong> — so scaling doesn’t break the business.
+  </p>
+
+  <p>
+    I’ve managed <strong>₹30L+ in monthly ad spend</strong> and helped brands grow.
+    I don’t chase vanity ROAS. I build <strong>profit-first systems</strong> founders can scale with clarity and confidence.
+  </p>
+
+  <p>
+    I work best with founders doing <strong>₹7L+/month or more</strong>, who want honest thinking and sustainable growth.
   </p>
 </section>
+
 
 <section id="services" class="section container">
   <h2 class="reveal">What I Deliver</h2>
