--- a/index.html
+++ b/index.html
@@ -32,10 +32,18 @@ body{
   background:var(--bg-body);
   line-height:1.6;
   -webkit-font-smoothing: antialiased;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 a{text-decoration:none;color:inherit;transition:0.3s}
-.container{max-width:1100px;margin:0 auto;padding:0 24px}
+
+.container{
+  max-width:1100px;
+  margin:0 auto;
+  width: 100%;
+  padding: 0 24px;
+}
 
 /* ANIMATIONS */
 .reveal {
@@ -90,6 +98,7 @@ a{text-decoration:none;color:inherit;transition:0.3s}
   transition: transform 0.2s, background 0.2s;
   border: none;
   cursor: pointer;
+  display: inline-block;
 }
 .cta-btn:hover{
   background:var(--primary-hover);
@@ -101,7 +110,7 @@ a{text-decoration:none;color:inherit;transition:0.3s}
   display:grid;
   grid-template-columns:1fr 400px;
   gap:48px;
-  padding:100px 0 60px;
+  padding:100px 24px 60px; 
   align-items: center;
 }
 .hero h1{
@@ -130,7 +139,6 @@ a{text-decoration:none;color:inherit;transition:0.3s}
   margin-bottom: 20px;
 }
 
-/* --- Hero Image Natural Fit --- */
 .photo-card{
   border-radius:24px;
   overflow:hidden;
@@ -151,7 +159,7 @@ a{text-decoration:none;color:inherit;transition:0.3s}
 /* LOGOS */
 .brand-section {
   text-align: center;
-  padding: 60px 0;
+  padding: 60px 24px;
   border-bottom: 1px solid var(--border);
 }
 .brand-label {
@@ -171,7 +179,6 @@ a{text-decoration:none;color:inherit;transition:0.3s}
   gap: 48px;
   opacity: 1;
 }
-/* Logos Natural Fit */
 .logo-item {
   height: 32px; 
   width: auto;
@@ -187,8 +194,8 @@ a{text-decoration:none;color:inherit;transition:0.3s}
   transform: translateY(-2px);
 }
 
-/* SECTIONS General */
-.section{padding:100px 0}
+/* SECTIONS */
+.section{padding:100px 24px;} 
 .section h2{
   font-size: 32px;
   letter-spacing: -1px;
@@ -318,7 +325,7 @@ a{text-decoration:none;color:inherit;transition:0.3s}
   gap: 10px;
 }
 
-/* --- GALLERY Natural Fit --- */
+/* GALLERY */
 .gallery{
   display:grid;
   grid-template-columns:repeat(3,1fr);
@@ -343,7 +350,7 @@ a{text-decoration:none;color:inherit;transition:0.3s}
   display: block;
 }
 
-/* FORM */
+/* FORM - CENTERED FIX */
 .contact-box{
   max-width:600px;
   padding:40px;
@@ -351,7 +358,16 @@ a{text-decoration:none;color:inherit;transition:0.3s}
   background:#fff;
   border:1px solid var(--border);
   box-shadow: var(--shadow-hover);
+  width: 100%;
+  margin: 0 auto; /* Ye line box ko center karegi */
+  text-align: left; /* Ander ka text left align rahega taaki form sundar dikhe */
 }
+
+/* Contact Section specific center alignment for Title */
+#contact {
+  text-align: center;
+}
+
 input,textarea{
   width:100%;
   padding:16px;
@@ -370,7 +386,7 @@ input:focus, textarea:focus {
   box-shadow: 0 0 0 4px rgba(79, 70, 229, 0.1);
 }
 
-/* --- NEW: ANIMATED INSTAGRAM LINK CSS --- */
+/* INSTAGRAM LINK */
 @keyframes insta-pulse {
   0% { transform: scale(1); box-shadow: 0 4px 10px rgba(220, 39, 67, 0.2); }
   50% { transform: scale(1.04); box-shadow: 0 8px 18px rgba(220, 39, 67, 0.4); }
@@ -385,8 +401,6 @@ input:focus, textarea:focus {
   font-weight: 600;
   color: var(--text-muted);
 }
-
-/* Instagram Styled Button */
 .instagram-link a {
   display: inline-flex;
   align-items: center;
@@ -399,20 +413,17 @@ input:focus, textarea:focus {
   text-decoration: none;
   font-weight: 600;
   transition: all 0.3s ease;
-  
-  /* Animation Apply kar di hai */
   animation: insta-pulse 2.5s infinite ease-in-out;
 }
-
 .instagram-link a:hover {
   transform: translateY(-3px);
   filter: brightness(1.1);
-  animation: none; /* Hover karne par pulse ruk jayega */
+  animation: none;
 }
 
 /* FOOTER */
 footer{
-  padding:60px 0;
+  padding:60px 24px;
   text-align:center;
   color:var(--text-muted);
   font-size:14px;
@@ -420,13 +431,46 @@ footer{
   background: #fff;
 }
 
-/* MOBILE */
+/* MOBILE FIXES */
 @media(max-width:900px){
-  .hero{grid-template-columns:1fr; text-align:center; gap: 30px;}
-  .hero h1{font-size: 36px;}
-  .hero p {margin: 0 auto 20px;}
+  .container, .hero, .section, .profit-section .container {
+    padding-left: 20px !important;
+    padding-right: 20px !important;
+  }
+  
+  .hero {
+    padding-top: 80px !important;
+    padding-bottom: 40px !important;
+  }
+  .section {
+    padding-top: 60px !important;
+    padding-bottom: 60px !important;
+  }
+
+  .hero{
+    grid-template-columns:1fr; 
+    text-align:center; 
+    gap: 30px;
+  }
+  .hero h1{font-size: 32px; word-wrap: break-word;} 
+  .hero p {margin: 0 auto 20px; font-size: 16px;}
+  
   .nav-links { display: none; }
-  .services,.experience-grid,.gallery,.profit-grid{grid-template-columns:1fr}
+  
+  .services,
+  .experience-grid,
+  .gallery,
+  .profit-grid{
+    grid-template-columns:1fr;
+    gap: 20px;
+  }
+  
+  .contact-box {
+    padding: 24px;
+  }
+  .profit-box {
+    padding: 24px;
+  }
 }
 </style>
 </head>
